--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
 	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
 	<display-name>DesafioSefaz</display-name>
 	<welcome-file-list>
-    <welcome-file>/telaInicial.xhtml</welcome-file>
+    <welcome-file>telaInicial.xhtml</welcome-file>
   </welcome-file-list>
 	<context-param>
 		<param-name>javax.faces.CONFIG_FILES</param-name>
@@ -19,9 +19,7 @@
 		<param-name>primefaces.THEME</param-name>
 		<param-value>cupertino</param-value>
 	</context-param>
-	<listener>
-		<listener-class>br.com.george.desafioSefaz.util.HibernateContexto</listener-class>
-	</listener>
+	
 	<servlet>
 		<servlet-name>Faces Servlet</servlet-name>
 		<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
